--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -12,7 +12,7 @@
     {% endif %}
 			<h2>Groups</h2>
 
-			<p>Welcome to the Groups Page! Select a Group with a shared interest!</p>
+			<p>Welcome to the Groups Page!</p>
 	</div>
 	{% if user.is_authenticated %}
 	<a href="{% url 'groups:create' %}" class="btn btn-md btn-fill btn-warning"><span class="glyphicon glyphicon-plus-sign"></span> Create New Group!</a>
